# jupyter-workspace

./: Dockerfile  docker-compose.yml  pyproject.toml  readme.md
jupyter/: utils.ipynb  utils.py
